--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,38 @@
+* {
+    margin: 5px;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: beige;
+    background-color: #FFFFE0;
 
 }
 
-
-
 h4,h2 {
-    color: #CC0000;
+    color: #D60000;
     text-align: center;
+}
+
+.chapter {
+    color:#D60000;
+    
+
+}
+.textbold {
+    font-weight: bold;
+
+}
+
+.textital {
+    font-style: italic;
+}
+
+.box {
+    width: 300px;
+    height: 300px;
+    background-color: green;
+    padding: 20px;
+    border: 3px solid black;
+    margin: 20px;
 }
 
