--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,11 +28,25 @@ h4,h2 {
 }
 
 .box {
+    position: absolute;
+    display: inline-block;
     width: 300px;
     height: 300px;
     background-color: green;
     padding: 20px;
     border: 3px solid black;
     margin: 20px;
+    z-index: 3;
 }
 
+.red {
+    background-color: red;
+    left: 80px;
+    position: absolute;
+    z-index: 4;
+}
+
+.example {
+    position: relative;
+
+}
